# ClQml

./: CMakeLists.txt  Main.qml  README.md  main.cpp
qmlfiles/: authorizationreadyview.qml  codeview.qml  passwordview.qml  phoneview.qml
sources/: cluser.cpp  cluser.h  dbuser.cpp  dbuser.h  debugmodel.cpp  debugmodel.h  geniusclient.cpp  geniusclient.h  musiclist.cpp  musiclist.h  tgclient.cpp  tgclient.h  tgcontroller.cpp  tgcontroller.h
